--- a/QuadraticSolverPython.ipynb
+++ b/QuadraticSolverPython.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1cc5aa3c",
    "metadata": {},
    "source": [
     "Quadratic Solver."
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37669668",
    "metadata": {},
    "source": [
     "We have equation $ax^2+bx+c=0$ with solution $x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}$."
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c5b113",
    "metadata": {},
    "source": [
     "Pick some equation, for example $x^2+2x+1=0$. Here we expect both solutions to be -1.0. To run the code, click in the textbox, hold control, and press enter, then instructions will appear onscreen. What do you notice if you change this to $x^2+2x+2$?"
@@ -26,19 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "23b70a37",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your a value: 1\n",
-      "What is your b value: -1\n",
-      "What is your c value: 1+j\n",
-      "The '+' solution is (1-1j) and the '-' solution is (-1.1102230246251565e-16+1j)\n",
-      "Now try this for other quadratic equations.\n"
+      "What is your a value: 1j\n",
+      "What is your b value: 1j\n",
+      "What is your c value: 1j\n",
+      "The '+' solution is (-0.5-0.8660254037844386j), and the '-' solution is (-0.5+0.8660254037844386j).\n",
+      " Now try this for other quadratic equations.\n"
      ]
     }
    ],
@@ -55,14 +51,45 @@
     "xplus = (-b+(b**2-4*a*c)**0.5)/(2*a)\n",
     "xminus = (-b-(b**2-4*a*c)**0.5)/(2*a)\n",
     "\n",
-    "print(\"The '+' solution is\", xplus, \"and the '-' solution is\", xminus)\n",
-    "print(\"Now try this for other quadratic equations.\")"
+    "print(f\"The '+' solution is {xplus}, and the '-' solution is {xminus}.\\n Now try this for other quadratic equations.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can you write a python function that solves quadratic equations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The '+' solution is (-0.5-0.8660254037844386j), and the '-' solution is (-0.5+0.8660254037844386j)\""
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def QuadSolve(a,b,c):\n",
+    "    xplus = (-b+(b**2-4*a*c)**0.5)/(2*a)\n",
+    "    xminus = (-b-(b**2-4*a*c)**0.5)/(2*a)\n",
+    "    return f\"The '+' solution is {xplus}, and the '-' solution is {xminus}\"\n",
+    "\n",
+    "QuadSolve(1j,1j,1j)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -76,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
