--- a/QuadraticSolverPython.ipynb
+++ b/QuadraticSolverPython.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1cc5aa3c",
    "metadata": {},
    "source": [
-    "Quadratic Solver."
+    "## Quadratic Solver."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "37669668",
    "metadata": {},
    "source": [
     "We have equation $ax^2+bx+c=0$ with solution $x=\\frac{-b\\pm\\sqrt{b^2-4ac}}{2a}$."
@@ -16,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60c5b113",
    "metadata": {},
    "source": [
     "Pick some equation, for example $x^2+2x+1=0$. Here we expect both solutions to be -1.0. To run the code, click in the textbox, hold control, and press enter, then instructions will appear onscreen. What do you notice if you change this to $x^2+2x+2$?"
@@ -24,20 +27,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f7de9149",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is your a value: 1j\n",
-      "What is your b value: 1j\n",
-      "What is your c value: 1j\n",
-      "The '+' solution is (-0.5-0.8660254037844386j), and the '-' solution is (-0.5+0.8660254037844386j).\n",
-      " Now try this for other quadratic equations.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23b70a37",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# the input command allows you to input a \"string,\" because we want a number we convert to a complex number using the complex \n",
     "#command; in python, the complex unit is 'j'.Note that if we only wanted to allow real coefficients we would use the float \n",
@@ -51,32 +54,26 @@
     "xplus = (-b+(b**2-4*a*c)**0.5)/(2*a)\n",
     "xminus = (-b-(b**2-4*a*c)**0.5)/(2*a)\n",
     "\n",
-    "print(f\"The '+' solution is {xplus}, and the '-' solution is {xminus}.\\n Now try this for other quadratic equations.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Can you write a python function that solves quadratic equations?"
+    "print(f\"The '+' solution is {xplus}, and the '-' solution is {xminus}.\\n Now try this for other quadratic equations.\")\n",
+    "\n",
+    "# we now want to plot this on some range\n",
+    "xmin = complex(input(\"What is your lowest x value: \"))\n",
+    "xmax = complex(input(\"What is your highest x value: \"))\n",
+    "x = np.linspace(xmin,xmax)\n",
+    "\n",
+    "# and define y = f(x)\n",
+    "y = a*x**2+b*x+c\n",
+    "\n",
+    "# and then plot, here we can verify the roots of the equation\n",
+    "plt.plot(np.real(x), np.real(y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "23985d18",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"The '+' solution is (-0.5-0.8660254037844386j), and the '-' solution is (-0.5+0.8660254037844386j)\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def QuadSolve(a,b,c):\n",
     "    xplus = (-b+(b**2-4*a*c)**0.5)/(2*a)\n",
@@ -85,11 +82,31 @@
     "\n",
     "QuadSolve(1j,1j,1j)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bf4575a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = float(input(\"What is your a value: \"))\n",
+    "b = float(input(\"What is your b value: \"))\n",
+    "c = float(input(\"What is your c value: \"))\n",
+    "d = float(input(\"What is your lowest x value: \"))\n",
+    "e = float(input(\"What is your highest x value: \"))\n",
+    "z=1\n",
+    "w=1\n",
+    "x = np.linspace(d,e)\n",
+    "y = w*np.exp(z*x**3+a*x**2+b*x+c)\n",
+    "\n",
+    "plt.plot(x, y)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
